solving errors